<resources>
    <string name="app_name">Loadigo</string>
    <string name="onboarding_title_1">Choose Destination</string>
    <string name="onboarding_desc_1">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut "</string>
    <string name="onboarding_title_2">Make Payment</string>
    <string name="onboarding_desc_2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut "</string>
    <string name="onboarding_desc_3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut "</string>
    <string name="onboarding_title_3">Delivering</string>
    <string name="next">Next</string>
    <string name = "delivery_your_items_anywhere_you_want">Delivery your items to anywhere you want</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="no_internet_connection" />
    <string name="please_fill_the_phone">phone is required</string>
    <string name="password_is_required">password is required</string>
    <string name="invalid_phone_number">invalid phone number</string>
    <string name="fullname_is_required">fullname is reuired</string>
    <string name="email_is_required">email is required</string>
    <string name="email_not_valid">Enter valid E-mail</string>
    <string name="contact_us">Contact Us</string>
    <string name="verification">Verification</string>
    <string name="we_have_sent_otp_on_your_register_mobile_number">We have sent OTP on your register mobile Number</string>
    <string name="continue_1">Continue</string>
    <string name="resend_again">Resend again</string>
    <string name="don_t_receive_otp">Don\'t receive OTP?</string>
    <string name="or">Or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="finish">Finish</string>
    <string name="complete_you_account">Complete you account</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="choose_your_service">Choose your service</string>
    <string name="insert_correct_otp">Please insert correct otp</string>
    <string name="sec_left">%s Sec Left</string>
    <string name="permission_string">This permission is needed</string>
    <string name="birthdate">BirthDate</string>
    <string name="enter_birth">Enter Your BirthDate</string>
    <string name="chose_your_profile">Choose Your Profile Photo</string>
    <string name="select_package_or_service_type">Select Package or Service Type</string>
    <string name="categories">Categories</string>
    <string name="order_history">Order History</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="become_a_captain">Become a captain</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="about_the_app">About the app</string>
    <string name="sign_out">Sign Out</string>
    <string name="logout_msg">Are you sure?</string>
    <string name="logout">SingOut</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome, %s</string>
    <string name="pick_delivery"><![CDATA[Pick & Delivery]]></string>
    <string name="profile">Profile</string>
    <string name="verified">Verified</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="dropoff_location">Dropoff Location</string>
    <string name="please_select">Please Select</string>
    <string name="deliver_your_items_anywhere_you_want">Deliver your items anywhere you want</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="select_pickup_location">Select Pickup location</string>
    <string name="office">Office</string>
    <string name="home">Home</string>
    <string name="other">Others</string>
    <string name="open">Open</string>
    <string name="delivery_location">Delivery location</string>
    <string name="no_address_returned">No Address Returned</string>
    <string name="enter_manual">Enter Manual</string>
    <string name="map">Map</string>
    <string name="select_pickup">Please Select Pickup Location</string>
    <string name="select_dropoff">Please Select Dropoff Location</string>
    <string name="location">Location</string>
    <string name="product_weight">Product Weight</string>
    <string name="pickup_category">Pickup Category</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="details_instructions_optional"><![CDATA[Details & Instructions (Optional)]]></string>
    <string name="enter_product_details_instructions">Enter Product Details / Instructions</string>
    <string name="place_order">Place Order</string>
    <string name="pay_in_wallet">Pay in Wallet</string>
    <string name="pay_via_your_wallet_balance">Pay via Your wallet balance</string>
    <string name="coupon">Coupon</string>
    <string name="offer_applied_on_the_bill">Offer applied on the bill</string>
    <string name="credit_card">Credit Card</string>
    <string name="pay_via_credit_card">Pay via Credit Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_while_drop_a_delivery">Pay while drop a delivery</string>
    <string name="cash_on_pickup">Cash on Pickup</string>
    <string name="pay_while_pick_a_delivery">Pay while pick a delivery</string>
    <string name="amount_to_pay_s_aed">Amount to Pay - %s AED</string>
    <string name="pickup_by">Pickup by</string>
    <string name="s_s">%s %s</string>
    <string name="order_id_s">Order Id - %s</string>
    <string name="expected_delivery_s">Expected Delivery %s</string>
    <string name="searching_driver">Searching driver ....</string>
    <string name="pickup_point">Pickup Point</string>
    <string name="delivery_point">Delivery Point</string>
    <string name="delivery_man">Delivery Man</string>
    <string name="track_your_order">Track your order</string>
    <string name="your_order_n_placed_successfully">Your Order \n Placed Successfully</string>
    <string name="no_orders">No Orders</string>
    <string name="order_no_s">Order No - #%s</string>
    <string name="currency">%s AED</string>
    <string name="wallet">Wallet</string>
    <string name="saved_card">Saved Card</string>
    <string name="add_new_card">+add new card</string>
    <string name="your_wallet_balance">Your wallet balance -</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="referral">Referral</string>
    <string name="your_referral_code">Your referral code</string>
    <string name="total_referrals_earning">Total referrals earning</string>
    <string name="ongoing">Ongoing</string>
    <string name="past">Completed</string>
    <string name="my_booking">My Booking</string>
    <string name="pickup_payment">Pickup and Payment</string>
    <string name="address_book">Address Book</string>
    <string name="tow_truck">Tow Truck</string>
    <string name="fuel">Fuel</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="notes">Notes</string>
    <string name="dd_mm_yyy">dd-mm-yyy</string>
    <string name="hh_mm">HH/MM</string>
    <string name="book_service">Book Service</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="buy_anything_from_any_store_or_resturant_in_your_city">Buy anything from any Store or Resturant in your city</string>
    <string name="store_restaurant_location">Store/ Restaurant Location</string>
    <string name="pickup_date_and_time">Pickup Date and Time</string>
    <string name="now">Now</string>
    <string name="about">About</string>
    <string name="search_something">Search Something</string>
    <string name="need_some_help_with_front">Need Some help with front?</string>
    <string name="quick_contact">Quick Contact</string>
    <string name="name">Name</string>
    <string name="contact">Contact Us</string>
    <string name="email">Email</string>
    <string name="choose_your">Choose your</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="suggestion">Suggestion</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="_120_words">120 words</string>
    <string name="give_us_your_rating">Give us your rating</string>
    <string name="how_do_you_feel">How do you feel?</string>
    <string name="give_us_feedback">Give us Feedback</string>
    <string name="cannot_access_location">Can\'t Access your Location , Please open your location from device settings</string>
</resources>